news/4.39/acknowledgements.md
## Eclipse 2026-03 Acknowledgements

We would also like to thank the users and adopters who support our efforts through a range of activities, including early testing, being a Friend of Eclipse, contracting special work, or outright employment.

A special thanks goes to [Holger Voormann](https://github.com/howlger) for his Eclipse IDE promotion videos.

Another special thanks to other Eclipse projects we build upon: EMF and ECF, who also provide timely updates so we can release on time.
We also thank the other Eclipse projects that make up part of the infrastructure we depend on: Tycho, Orbit, EGit, EMF, and ECF for providing fixes and steady improvements.

## Eclipse Platform

The Platform team would like to thank everyone who has helped us improve quality by testing and reporting bugs and enhancement requests.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-platform contributors -->
||||
|---|---|---|
| [al-noori](https://github.com/al-noori) | [Amartya Parijat](https://github.com/amartya4256) | [Andreas Koch](https://github.com/akoch-yatta) |
| [Andrey Loskutov](https://github.com/iloveeclipse) | [arunjose696](https://github.com/arunjose696) | [Christoph Läubrich](https://github.com/laeubi) |
| [danthe1st](https://github.com/danthe1st) | [Deepika Udayagiri](https://github.com/deepika-u) | [Denis Ungemach](https://github.com/DenisUngemach) |
| [Ed Merks](https://github.com/merks) | [Elsa Zacharia](https://github.com/elsazac) | [Federico Jeanne](https://github.com/fedejeanne) |
| [Hannes Wellmann](https://github.com/HannesWell) | [Jonah Graham](https://github.com/jonahgraham) | [Klare, Heiko](https://github.com/HeikoKlare) |
| [Lars Vogel](https://github.com/vogella) | [Matthias Becker](https://github.com/BeckerWdf) | [Matthias Mailänder](https://github.com/Mailaender) |
| [Patrick.Ziegler](https://github.com/ptziegler) | [Phillipus](https://github.com/Phillipus) | [raghucssit](https://github.com/raghucssit) |
| [Rahul Mohanan](https://github.com/MohananRahul) | [Sebastian Ratz](https://github.com/sratz) | [Shahzaib Ibrahim](https://github.com/ShahzaibIbrahim) |
| [Sougandh S](https://github.com/SougandhS) | [Stephan Wahlbrink](https://github.com/wahlbrink) | [Suby S Surendran](https://github.com/subyssurendran666) |
| [Tobias Melcher](https://github.com/tobiasmelcher) | [Tobias Melcher](https://github.com/tobias-melcher) | [Vasili Gulevich](https://github.com/basilevs) |
| [Александър Куртаков](https://github.com/akurtakov)  |
<!-- END:   eclipse-platform contributors -->

## Java Development Tools

The JDT team thanks everyone who filed good enhancement requests, helped improve quality by testing and filing bug reports, and provided answers on JDT forums/newsgroups.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-jdt contributors -->
||||
|---|---|---|
| [Andrey Loskutov](https://github.com/iloveeclipse) | [arunjose696](https://github.com/arunjose696) | [Carsten Hammer](https://github.com/carstenartur) |
| [Christoph Läubrich](https://github.com/laeubi) | [coehlrich](https://github.com/coehlrich) | [danthe1st](https://github.com/danthe1st) |
| [David Thompson](https://github.com/datho7561) | [Ed Merks](https://github.com/merks) | [Elsa Zacharia](https://github.com/elsazac) |
| [Federico Jeanne](https://github.com/fedejeanne) | [Hannes Wellmann](https://github.com/HannesWell) | [Harisankars007](https://github.com/Harisankars007) |
| [Jay Arthanareeswaran](https://github.com/jarthana) | [Jeff Johnston](https://github.com/jjohnstn) | [Kamil Krzywanski](https://github.com/kamilkrzywanski) |
| [Manoj N Palat](https://github.com/mpalat) | [Mehmet Emin Karaman](https://github.com/mehmet-karaman) | [Patrick.Ziegler](https://github.com/ptziegler) |
| [raghucssit](https://github.com/raghucssit) | [Rob Stryker](https://github.com/robstryker) | [Simeon Andreev](https://github.com/trancexpress) |
| [Snjezana Peco](https://github.com/snjeza) | [Sougandh S](https://github.com/SougandhS) | [Srikanth Sankaran](https://github.com/srikanth-sankaran) |
| [Stephan Herrmann](https://github.com/stephan-herrmann) | [Suby S Surendran](https://github.com/subyssurendran666) | [Tobias Melcher](https://github.com/tobiasmelcher) |
| [Александър Куртаков](https://github.com/akurtakov)  |
<!-- END:   eclipse-jdt contributors -->

## Plug-in Development Environment

The Plug-in Development Environment team thanks numerous contributors who continue to improve the component every release.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-pde contributors -->
||||
|---|---|---|
| [Andrey Loskutov](https://github.com/iloveeclipse) | [Christoph Läubrich](https://github.com/laeubi) | [Ed Merks](https://github.com/merks) |
| [Hannes Wellmann](https://github.com/HannesWell) | [Jonah Graham](https://github.com/jonahgraham) | [Klare, Heiko](https://github.com/HeikoKlare) |
| [Lars Vogel](https://github.com/vogella) | [Matthias Becker](https://github.com/BeckerWdf) | [Moaead Yahya](https://github.com/moaead) |
| [Neha Burnwal](https://github.com/nburnwal09) | [Patrick.Ziegler](https://github.com/ptziegler) | [Simeon Andreev](https://github.com/trancexpress) |
| [Александър Куртаков](https://github.com/akurtakov)  |
<!-- END:   eclipse-pde contributors -->

## Equinox

The Equinox team thanks all contributors who helped improve the project by filing bug reports and enhancement requests.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-equinox contributors -->
||||
|---|---|---|
| [Andrey Loskutov](https://github.com/iloveeclipse) | [arunjose696](https://github.com/arunjose696) | [Christoph Läubrich](https://github.com/laeubi) |
| [Ed Merks](https://github.com/merks) | [Hannes Wellmann](https://github.com/HannesWell) | [Klare, Heiko](https://github.com/HeikoKlare) |
| [Александър Куртаков](https://github.com/akurtakov)  |
<!-- END:   eclipse-equinox contributors -->

## Eclipse Foundation

The entire Eclipse Project team would like to thank the [Eclipse Foundation staff](https://www.eclipse.org/org/foundation/staff/) for their tireless efforts and especially
[Frederic Gurr](https://github.com/fredg02) and [Sébastien Heurtematte](https://github.com/heurtematte) for not only keeping all that infrastructure going but also constantly improving it.

<!-- A dummy change -->