news/4.40/acknowledgements.md
## Eclipse 2026-06 Acknowledgements

We would also like to thank the users and adopters who support our efforts through a range of activities, including early testing, being a Friend of Eclipse, contracting special work, or outright employment.

A special thanks goes to [Holger Voormann](https://github.com/howlger) for his Eclipse IDE promotion videos.

Another special thanks to other Eclipse projects we build upon: EMF and ECF, who also provide timely updates so we can release on time.
We also thank the other Eclipse projects that make up part of the infrastructure we depend on: Tycho, Orbit, EGit, EMF, and ECF for providing fixes and steady improvements.

## Eclipse Platform

The Platform team would like to thank everyone who has helped us improve quality by testing and reporting bugs and enhancement requests.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-platform contributors -->
||||
|---|---|---|
| [Amartya Parijat](https://github.com/amartya4256) | [Andrey Loskutov](https://github.com/iloveeclipse) | [Aung Nanda Oo](https://github.com/NikkiAung) |
| [Christoph Läubrich](https://github.com/laeubi) | [danthe1st](https://github.com/danthe1st) | [Ed Merks](https://github.com/merks) |
| [Elsa Zacharia](https://github.com/elsazac) | [Federico Jeanne](https://github.com/fedejeanne) | [Hannes Wellmann](https://github.com/HannesWell) |
| [jasmin261098](https://github.com/jasmin261098) | [Klare, Heiko](https://github.com/HeikoKlare) | [Knoll, Vladislav](https://github.com/vlakn) |
| [Lars Vogel](https://github.com/vogella) | [Marcus Hoepfner](https://github.com/marcushoepfner) | [Martin Jobst](https://github.com/mx990) |
| [Matthias Becker](https://github.com/BeckerWdf) | [Mehmet Karaman](https://github.com/mehmet-karaman) | [NEETHIKA SUMESH](https://github.com/Neethika-sumesh12) |
| [Patrick Ziegler](https://github.com/ptziegler) | [Ragi George](https://github.com/RagiGeorge) | [Rahul Mohanan](https://github.com/MohananRahul) |
| [Simeon Andreev](https://github.com/trancexpress) | [Sougandh S](https://github.com/SougandhS) | [Stefan Winkler](https://github.com/xpomul) |
| [Stephan Wahlbrink](https://github.com/wahlbrink) | [Tobias Melcher](https://github.com/tobias-melcher) | [Tobias Melcher](https://github.com/tobiasmelcher) |
| [Александър Куртаков](https://github.com/akurtakov)  |
<!-- END:   eclipse-platform contributors -->

## Java Development Tools

The JDT team thanks everyone who filed good enhancement requests, helped improve quality by testing and filing bug reports, and provided answers on JDT forums/newsgroups.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-jdt contributors -->
||||
|---|---|---|
| [Andrey Loskutov](https://github.com/iloveeclipse) | [BoykoAlex](https://github.com/BoykoAlex) | [danthe1st](https://github.com/danthe1st) |
| [Ed Merks](https://github.com/merks) | [Eric Milles](https://github.com/eric-milles) | [Federico Jeanne](https://github.com/fedejeanne) |
| [Hannes Wellmann](https://github.com/HannesWell) | [Harisankars007](https://github.com/Harisankars007) | [Ivan](https://github.com/inuyasha82) |
| [Jay Arthanareeswaran](https://github.com/jarthana) | [Jeff Johnston](https://github.com/jjohnstn) | [kaluchi](https://github.com/kaluchi) |
| [Klare, Heiko](https://github.com/HeikoKlare) | [Noopur Gupta](https://github.com/noopur2507) | [Ragi George](https://github.com/RagiGeorge) |
| [Rob Stryker](https://github.com/robstryker) | [Simeon Andreev](https://github.com/trancexpress) | [Sougandh S](https://github.com/SougandhS) |
| [Srikanth Sankaran](https://github.com/srikanth-sankaran) | [Stephan Herrmann](https://github.com/stephan-herrmann) | [Suby S Surendran](https://github.com/subyssurendran666) |
<!-- END:   eclipse-jdt contributors -->

## Plug-in Development Environment

The Plug-in Development Environment team thanks numerous contributors who continue to improve the component every release.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-pde contributors -->
||||
|---|---|---|
| [Andrey Loskutov](https://github.com/iloveeclipse) | [Christoph Läubrich](https://github.com/laeubi) | [Ed Merks](https://github.com/merks) |
| [Hannes Wellmann](https://github.com/HannesWell) | [Klare, Heiko](https://github.com/HeikoKlare) | [Lars Vogel](https://github.com/vogella) |
| [Patrick Ziegler](https://github.com/ptziegler) | [Simeon Andreev](https://github.com/trancexpress)  |
<!-- END:   eclipse-pde contributors -->

## Equinox

The Equinox team thanks all contributors who helped improve the project by filing bug reports and enhancement requests.
Special thanks to all code contributors (alphabetically):
<!-- START: eclipse-equinox contributors -->
||||
|---|---|---|
| [Andrey Loskutov](https://github.com/iloveeclipse) | [Christoph Läubrich](https://github.com/laeubi) | [Ed Merks](https://github.com/merks) |
| [Hannes Wellmann](https://github.com/HannesWell) | [Mykola Nikishov](https://github.com/manandbytes) | [Nikolay Prodanov](https://github.com/jitzerttok51) |
| [Thomas Watson](https://github.com/tjwatson) | [William Riley](https://github.com/Kummallinen) | [Александър Куртаков](https://github.com/akurtakov) |
<!-- END:   eclipse-equinox contributors -->

## Eclipse Foundation

The entire Eclipse Project team would like to thank the [Eclipse Foundation staff](https://www.eclipse.org/org/foundation/staff/) for their tireless efforts and especially
[Frederic Gurr](https://github.com/fredg02), [Sébastien Heurtematte](https://github.com/heurtematte) and [Paweł Stankiewicz](https://github.com/pstankie) for not only keeping all that infrastructure going but also constantly improving it.

<!-- A dummy change -->